0.6 (2021-07-31)
----------------

* Improve Supvisors stability when dealing with remote programs undefined locally

* Add expand / shrink actions per application to the ProcAddressView of the Web UI

* Upon authorization of a new node in Supvisors, back to DEPLOYMENT state to repair applications

* Application state is evaluated against the starting sequence of its processes only

* Fixed issue with when Master is stopped while in DEPLOYMENT state

* Fixed issue with application that would not fully stop when using STOP_APPLICATION starting failure strategy

* Fixed issue related to https://github.com/julien6387/supvisors/issues/85
  An exception was raised when program procnum was greater than the list of applicable nodes

* Fixed https://github.com/julien6387/supvisors/issues/91
  Fix CSS style on process tables in HTML

* Fixed https://github.com/julien6387/supvisors/issues/90
  The Master Supvisors node drives the transition to OPERATION

* In the Web UI, set the process state color to FATAL when process has EXITED unexpectedly

* Change default expected loading to 0 in program rules

* Python Enum used for enumerations (not available in Python 2.7)

* Remove supvisors_shortcuts from source code to get rid of IDE warnings

* All unit tests updated from unittest to pytest

* Documentation updated


0.5 (2021-03-01)
----------------

* New option 'force_synchro_if' to force the end of the synchronization phase when a subset of nodes are active

* New starting strategy LOCAL added to command the starting of an application on the local node only

* Fixed https://github.com/julien6387/supvisors/issues/87
  Under particular circumstances, Supvisors could have multiple master nodes

* Fixed https://github.com/julien6387/supvisors/issues/86
  The starting and stopping sequences may fail and block when a sub-sequence includes only unstartable programs

* Fixed https://github.com/julien6387/supvisors/issues/85